--- a/fruto.html
+++ b/fruto.html
@@ -62,7 +62,7 @@
         }
 
         .view {
-            background: url("img/fondo.jpg")no-repeat center center fixed;
+            background: url("img/Berenjena.jpg")no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -86,13 +86,14 @@
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+             <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">¿Quienes Somos?</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link">Categorias</a>
+                        <a class="nav-link" href="categorias.html">Categorias</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">Paises</a>
@@ -114,7 +115,7 @@
         <div class="full-bg-img flex-center">
             <ul class="animated fadeInUp">
                 <li style="margin-top: 30px;">
-                    <center><h2><strong>Categorias</strong></h2></center>
+                    <center><h2><strong>Fruto</strong></h2></center>
                 </li>
             </ul>
         </div>
@@ -122,15 +123,14 @@
 
     <div class="container">
         <br>
-        <h2>Hojas</h2>
         <hr>
         <div class="row">
 
             <div class="col-md-4 col-xs-6">
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
-                        <h3 class="card-header success-color-dark white-text"><center>Acela</center></h3>
+                        <h3 class="card-header success-color-dark white-text"><center>Berenjena</center></h3>
                         <div class="card-block">
-                         <img style="width:100%;" class="imagencategorias" src="img/acelga.png" >
+                         <img style="width:100%;" class="imagencategorias" src="img/Berenjena.jpg" >
                         <br>
                         <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
@@ -139,82 +139,17 @@
 
             <div class="col-md-4 col-xs-6">
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
-                        <h3 class="card-header success-color-dark white-text"><center>Achicoria</center></h3>
+                        <h3 class="card-header success-color-dark white-text"><center>Zapallo</center></h3>
                         <div class="card-block">
-                          <img style="width:100%;" class="imagencategorias" src="img/Achicoria.jpg" >
+                          <img style="width:100%;" class="imagencategorias" src="img/zapallo.jpg" >
                         <br>
                         <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
                         </div>
             </div>
             </div>
 
-            <div class="col-md-4 col-xs-6">
-            <div  class="card wow fadeIn" data-wow-delay="0.4s">
-            <h3 class="card-header success-color-dark white-text"><center>Escarola</center></h3>
-            <div class="card-block">
-            <img style="width:100%;" class="imagencategorias" src="img/Escarola.jpg" >
-            <br>
-            <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
-            </div>
-            </div>
-            </div>
-
-            </div>
-            <div class="row">
-            <br>
-            <div class="col-md-4 col-xs-6">
-            <div  class="card wow fadeIn" data-wow-delay="0.4s">
-            <h3 class="card-header success-color-dark white-text"><center>Espinaca</center></h3>
-            <div class="card-block">
-            <img style="width:100%;" class="imagencategorias" src="img/Espinaca.jpg" >
-            <br>
-            <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
-            </div>
-            </div>
-            </div>
-
-
-            <div class="col-md-4 col-xs-6">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <center><h3 class="panel-title"><strong>Lechuga</strong></h3></center>
-                    </div>
-                    <div class="panel-body">
-                        <img style="width:100%;" class="imagencategorias" src="img/Lechuga.jpg" >
-                        <br>
-                        <center><a class="btn btn-primary" href="raices/cebolla.html">entrar</a></center>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="col-md-4 col-xs-6">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <center><h3 class="panel-title"><strong>Perejil</strong></h3></center>
-                    </div>
-                    <div class="panel-body">
-                        <img style="width:100%;" class="imagencategorias" src="img/Perejil.jpg" >
-                        <br>
-                        <center><a class="btn btn-primary" href="raices/cebolla.html">entrar</a></center>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 col-xs-6">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <center><h3 class="panel-title"><strong>Repollo</strong></h3></center>
-                    </div>
-                    <div class="panel-body">
-                        <img style="width:100%;" class="imagencategorias" src="img/Repollo.jpg" >
-                        <br>
-                        <center><a class="btn btn-primary" href="raices/cebolla.html">entrar</a></center>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+            
+           
     </div>
     <!--/.Mask-->
 
