Añadida una nueva pagina

--- a/hojas.html
+++ b/hojas.html
@@ -129,9 +129,9 @@
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
                         <h3 class="card-header success-color-dark white-text"><center>Acelga</center></h3>
                         <div class="card-block">
-                         <img style="width:100%;" class="imagencategorias" src="img/arvejas.jpg" >
+                         <img style="width:100%;" class="imagencategorias" src="img/A_acelga_planta.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
+                        <center><a class="btn btn-success" href="hojas/Acelga.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
             </div>
             </div>
@@ -142,7 +142,7 @@
                         <div class="card-block">
                           <img style="width:100%;" class="imagencategorias" src="img/Achicoria.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+                        <center><a class="btn btn-success" href="hojas/Achicoria.html">ENTRAR</a></center>
                         </div>
             </div>
             </div>
