--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img style=" width: 20%; margin-top: ;" src="img/logo4.png">
+                <img style=" width: 20%" src="img/logo4.png">
             </a>
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
