--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <a class="nav-link">Home <span class="sr-only">(current)</span></a>
                     </li>
                      <li class="nav-item">
-                        <a href="Quienes Somos.html" class="nav-link">¿Quienes Somos?</a>
+                        <a href="about.html" class="nav-link">¿Quienes Somos?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="categorias.html">Categorias</a>
