cambios en categorias.html fruto.html tuberculos.html

--- a/fruto.html
+++ b/fruto.html
@@ -62,7 +62,7 @@
         }
 
         .view {
-            background: url("img/Berenjena.jpg")no-repeat center center fixed;
+            background: url("img/Berenjena-encebollada_2.jpeg")no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -130,7 +130,7 @@
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
                         <h3 class="card-header success-color-dark white-text"><center>Berenjena</center></h3>
                         <div class="card-block">
-                         <img style="width:100%;" class="imagencategorias" src="img/Berenjena.jpg" >
+                         <img style="width:100%;" class="imagencategorias" src="img/Berenjena-encebollada_2.jpeg" >
                         <br>
                         <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
