--- a/tuberculos.html
+++ b/tuberculos.html
@@ -87,7 +87,6 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">¿Quienes Somos?</a>
@@ -141,7 +140,7 @@
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
                         <h3 class="card-header success-color-dark white-text"><center>Cebolla</center></h3>
                         <div class="card-block">
-                          <img style="width:100%;" class="imagencategorias" src="img/Cebolla.jpg" >
+                          <img style="width:100%;" class="imagencategorias" src="img/LA-CEBOLLA.png" >
                         <br>
                         <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
                         </div>
