--- a/categorias.html
+++ b/categorias.html
@@ -165,7 +165,7 @@
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
                         <h3 class="card-header success-color-dark white-text"><center>Fruto</center></h3>
                         <div class="card-block">
-                          <img style="width:100%;" class="imagencategorias" src="img/Berenjena.jpg" >
+                          <img style="width:100%;" class="imagencategorias" src="img/Berenjena-encebollada_2.jpeg" >
                         <br>
                         <center><a class="btn btn-success" href="fruto.html">ENTRAR</a></center>
                         </div>
