--- a/flor.html
+++ b/flor.html
@@ -129,7 +129,7 @@
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
                         <h3 class="card-header success-color-dark white-text"><center>Coliflor</center></h3>
                         <div class="card-block">
-                         <img style="width:100%;" class="imagencategorias" src="img/categorias/coliflor.jpg" >
+                         <img style="width:100%;" class="imagencategorias" src="img/categorias/coliflor2.jpg" >
                         <br>
                         <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
@@ -140,7 +140,7 @@
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
                         <h3 class="card-header success-color-dark white-text"><center>brocoli</center></h3>
                         <div class="card-block">
-                          <img style="width:100%;" class="imagencategorias" src="img/categorias/Brocoli.png" >
+                          <img style="width:100%;" class="imagencategorias" src="img/brocoli2.png" >
                         <br>
                         <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
                         </div>
