--- a/hojas/Achicoria.html
+++ b/hojas/Achicoria.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="google-signin-client_id" content="820318990187-85tc46djiurr5c8poobe510sv23n1mm7.apps.googleusercontent.com">
-    <title>HuertaLive | Acelga</title>
+    <title>HuertaLive | Achicoria</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -109,9 +109,8 @@ footer.page-footer {
     </h3>
 <div class="card-block">
 <ul>
-      <li>Lo ideal es realizar el riego por goteo para entonces evitar que se mojen las hojas porque pueden pudrirse las hojas</li>
-      <li>Se recomienda regar en época de crecimiento y mantener el suelo siempre húmedo pero no en exceso.
-</li>
+      <li>La temperatura ideal para la siembra es de 25 a 30°C, dependiendo del tipo de semilla. Sin embargo, hay algunas que resisten una temperatura mínima de 8°C y una máxima de 30°C</li>
+      <li>Existen 2 tipos de siembra: en surcos o a voleo. Si decides sembrarla en surcos, debes respetar una distancia de 30 a 60 cm. La siembra al voleo debes estar atento cuando los plantines enseñen sus primeras hojas para procurar mantener una distancia entre planta y planta de unos 35 cm.</li>
       
     </ul>
 </div>
@@ -132,8 +131,8 @@ footer.page-footer {
     </h3>
 <div class="card-block">
       <ul>
-    <li>Las acelgas necesitan tierras húmedas para crecer, evitando la saturación de agua. Una vez sembradas las semillas, se recomienda regar diariamente a lo largo de una semana sin abono alguno. Una práctica muy agradecida, es la de rastrillar para remover la tierra unos 2 – 3 cm.</li>
-    <li>Dependiendo de la estación del año, el riego varía en frecuencia siendo en verano una o dos veces a la semana y en invierno mínimamente (apenas).</li>
+    <li>Si la achicoria se cultiva para aprovechar la raíz, entonces lo mejor es podar de modo regular las hojas para que no se desarrollen de manera  rápida.</li>
+    <li></li>
   </ul>
       </br>
       </hr>
@@ -150,12 +149,13 @@ footer.page-footer {
 <div  class="card wow fadeIn" data-wow-delay="0.4s">
 <h3 class="card-header success-color-dark white-text">
       <center>
-    La poda
+    El riego
   </center>
     </h3>
 <div class="card-block">
       <ul>
-    <li>La poda de las acelgas se limita a quitar las posibles malas hierbas que aparecen en la base de la planta.</li>
+    <li> Lo ideal es realizar el riego por goteo para entonces evitar que se mojen las hojas porque pueden pudrirse las hojas</li>
+    <li>en climas secos puede ser necesario regar varias veces a la semana mientras que en climas húmedos lo mejor será hacerlo con menos frecuencia para no encharcar el terreno.</li>
   </ul>
 
 </div>
