--- a/legumbre.html
+++ b/legumbre.html
@@ -151,7 +151,7 @@
             <div  class="card wow fadeIn" data-wow-delay="0.4s">
             <h3 class="card-header success-color-dark white-text"><center>Poroto</center></h3>
             <div class="card-block">
-            <img style="width:100%;" class="imagencategorias" src="img/Poroto.jpg" >
+            <img style="width:100%;" class="imagencategorias" src="img/LegumbresHL.png" >
             <br>
             <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
             </div>
