--- a/tuberculos.html
+++ b/tuberculos.html
@@ -151,7 +151,7 @@
             <div  class="card wow fadeIn" data-wow-delay="0.4s">
             <h3 class="card-header success-color-dark white-text"><center>Papa</center></h3>
             <div class="card-block">
-            <img style="width:100%;" class="imagencategorias" src="img/PAPA.jpg" >
+            <img style="width:100%;" class="imagencategorias" src="img/papa1.jpg" >
             <br>
             <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
             </div>
@@ -189,7 +189,7 @@
             <div  class="card wow fadeIn" data-wow-delay="0.4s">
             <h3 class="card-header success-color-dark white-text"><center>Zanahoria</center></h3>
             <div class="card-block">
-            <img style="width:100%;" class="imagencategorias" src="img/Zanahoria.jpg" >
+            <img style="width:100%;" class="imagencategorias" src="img/Zanahoria2.jpg" >
             <br>
             <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
             </div>
