--- a/hojas.html
+++ b/hojas.html
@@ -97,6 +97,9 @@
                     <li class="nav-item">
                         <a class="nav-link">Paises</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link">Glosario</a>
+                    </li>
 
                 </ul>
 
