--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                     <li class="nav-item">
                         <a class="nav-link">Paises</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link">Glosario</a>
+                    </li>
                    
                 </ul>
                 
