--- a/categorias.html
+++ b/categorias.html
@@ -82,33 +82,30 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img style=" width: 20%; margin-top: ;" src="img/logo4.png">
+                <img style=" width: 20%;" src="img/logo4.png">
             </a>
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-            <a class="nav-link" href="index.html">home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">¿Quienes Somos?</a>
-                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="categorias.html">Categorias</a>
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                        <li class="nav-item">
+                        <a href="about.html" class="nav-link">¿Quienes Somos?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="categorias.html" class="nav-link">Categorias<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">Paises</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a href="signup.html" class="nav-link">Sign Up</a>
+                    </li>
                 </ul>
-
             </div>
         </div>
     </nav>
     <!--/.Navbar-->
-
-
-
-
 
     <!--Mask-->
     <div class="view hm-black-strong" style="width: 100%; height: 150px;">
