--- a/index.html
+++ b/index.html
@@ -93,12 +93,14 @@
                         <a href="about.html" class="nav-link">¿Quienes Somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="categorias.html">Categorias</a>
+                        <a href="categorias.html" class="nav-link">Categorias</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link">Paises</a>
                     </li>
-                   
+                    <li class="nav-item">
+                        <a href="signup.html" class="nav-link">Sign Up</a>
+                    </li>
                 </ul>
                 
             </div>
