--- a/signup.html
+++ b/signup.html
@@ -148,7 +148,9 @@ function showPosition(position) {
 }
 </script>
 
-
+    <body>
+        
+    </body>
 
     <!--Footer-->
     <footer class="page-footer center-on-small-only success-color-dark">
