--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ footer.page-footer {
 <nav class="navbar navbar-toggleable-md navbar-dark scrolling-navbar success-color-dark">
       <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-    <a class="navbar-brand" href="#"> <img style=" width: 20%; margin-top: ;" src="../img/logo4.png"> </a>
+    <a class="navbar-brand" href="#"> <img style=" width: 20%; margin-top: 20px;" src="../img/logo4.png"> </a>
     <div class="collapse navbar-collapse" id="navbarNav1">
           <ul class="navbar-nav mr-auto">
         <li class="nav-item"> <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a> </li>
@@ -175,7 +175,7 @@ footer.page-footer {
 <br>
 <hr>
 
-br>
+<br>
 <hr>
 <div class="row">
 <div class="col-md-12 col-xs-6">
