Cambios en lista e items

--- a/about.html
+++ b/about.html
@@ -30,6 +30,14 @@
         .view {
             height: 100%;
         }
+
+        ul {
+            display: inline-flex;
+        }
+
+        li {
+            margin: 20px;
+        }
         /* Navigation*/
         
         .navbar {
