--- a/about.html
+++ b/about.html
@@ -99,10 +99,10 @@
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link">Home</a>
                     </li>
                      <li class="nav-item">
-                        <a href="about.html" class="nav-link">¿Quienes Somos?</a>
+                        <a href="about.html" class="nav-link">¿Quienes Somos? <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="categorias.html" class="nav-link">Categorias</a>
