--- a/login.html
+++ b/login.html
@@ -29,6 +29,22 @@
             margin: 0 auto;
         }
 
+        button {
+            font-family: "Roboto", sans-serif;
+            text-transform: uppercase;
+            outline: 0;
+            background: #4CAF50;
+            width: 100%;
+            border: 0;
+            padding: 10px;
+            margin-top: 15px;
+            color: #FFFFFF;
+            font-size: 14px;
+            -webkit-transition: all 0.3 ease;
+            transition: all 0.3 ease;
+            cursor: pointer;
+        }
+
         html,
         body,
         .view {
@@ -137,10 +153,11 @@
                     <div class="col-lg-6 col-md-10 col-sm-10 col-centered">
                         <div class="card wow">
                             <div class="card-block">
-                                <form action="" method="post">
-                                    <input type="text" name="name" id=""><br>
-                                    <input type="password" name="password" id=""><br>
-                                    <input type="submit" value="Login">
+                                <form class="login-form">
+                                    <input type="text" placeholder="Usuario"/>
+                                    <input type="password" placeholder="Contraseña"/>
+                                    <button>Login</button>
+                                    <p class="message" style="color: black; margin-top:5px">¿No tienes cuenta? <a href="#">Regístrate</a></p>
                                 </form>
                             </div>
                         </div>
