--- a/about.html
+++ b/about.html
@@ -134,19 +134,19 @@
             <ul class="animated fadeInUp">
                 <li class="QS">
                     Aldana Ludueña
-                    <img src="img\About\AldanaL.jpg" style="width: 150px">
-                </li>   
+                    <img src="img\About\AldanaL.jpg" style="width: 75px; background-size:50px; border-radius: 75px;">
+                </li> 
                 <li class="QS">
                     Emma Gutierez
-                    <img src="img\About\EmmaG.jpg" style="width: 150px">
+                    <img src="img\About\EmmaG.jpg" style="width: 75px; background-size:50px; border-radius: 75px;">
                 </li>
                 <li class="QS">
                    Manuel Artigas
-                   <img src="img\About\ManuelA.jpg" style="width: 150px">
+                   <img src="img\About\ManuelA.jpg" style="width: 75px; background-size:50px; border-radius: 75px;">
                 </li>
                 <li class="QS">
                     Maximiliano Alcazar
-                    <img src="img\About\MaxiA.jpg" style="width: 150px">
+                    <img src="img\About\MaxiA.jpg" style="width: 75px; background-size:50px; border-radius: 75px;">
                 </li>
             </ul>
         </div>
