SON MUCHOS CAMBIOS WEY JAJAJAJAJAJAJA

--- a/flor.html
+++ b/flor.html
@@ -81,7 +81,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img style=" width: 20%; margin-top: ;" src="img/logo4.png">
+                <img style=" width: 20%; margin-top: ;" src="img/logo4-2.png">
             </a>
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
@@ -131,7 +131,7 @@
                         <div class="card-block">
                          <img style="width:100%;" class="imagencategorias" src="img/categorias/coliflor2.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
+                        <center><a class="btn btn-success" href="Flor/Coliflor.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
             </div>
             </div>
@@ -142,7 +142,7 @@
                         <div class="card-block">
                           <img style="width:100%;" class="imagencategorias" src="img/brocoli2.png" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+                        <center><a class="btn btn-success" href="Flor/Brocoli.html">ENTRAR</a></center>
                         </div>
             </div>
             </div>
@@ -159,7 +159,7 @@
 
                 <!--First column-->
                 <div class="col-md-3 offset-lg-1 hidden-lg-down">
-                    <img style=" width: 80%; margin-top:-4px; margin-left: -17px;" src="img/logo4.png">
+                    <img style=" width: 80%; margin-top:-4px; margin-left: -17px;" src="img/logo4-2.png">
                     <p>Crea tu huerta en casa guiandote desde aquí</p>
 
                     <p>Versíon: 0.1.1</p>
