--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img style=" width: 20%" src="img/logo4.png">
+                <img style=" width: 20%" src="img/logo4-2.png">
             </a>
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
@@ -90,7 +90,7 @@
                         <a class="nav-link">Home <span class="sr-only">(current)</span></a>
                     </li>
                      <li class="nav-item">
-                        <a href="about.html" class="nav-link">¿Quienes Somos?</a>
+                        <a href="about.html" class="nav-link">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="categorias.html">Categorias</a>
@@ -118,7 +118,7 @@
         <div class="full-bg-img flex-center">
             <ul class="animated fadeInUp">
                 <li>
-                   <center><img style=" width: 40%; margin-top: -40px;" src="img/logo4.png"></center>
+                   <center><img style=" width: 40%; margin-top: -40px;" src="img/logo4-2.png"></center>
                 <li>
                     <p><strong>Crea tu propia huerta en casa!</strong></p>
                 </li>
@@ -158,7 +158,7 @@ function showPosition(position) {
 
                 <!--First column-->
                 <div class="col-md-3 offset-lg-1 hidden-lg-down">
-                    <img style=" width: 80%; margin-top:-4px; margin-left: -17px;" src="img/logo4.png">
+                    <img style=" width: 80%; margin-top:-4px; margin-left: -17px;" src="img/logo4-2.png">
                     <p>Crea tu huerta en casa guiandote desde aquí</p>
 
                     <p>Versíon: 0.1.2</p>
@@ -175,7 +175,7 @@ function showPosition(position) {
            <!--Copyright-->
         <div class="footer-copyright">
             <div class="container-fluid">
-              <strong>CoderDojo 2017</strong>
+              <strong>CoderDojo 2018</strong>
 
             </div>
         </div>
