--- a/fruto.html
+++ b/fruto.html
@@ -132,7 +132,7 @@
                         <div class="card-block">
                          <img style="width:100%;" class="imagencategorias" src="img/Berenjenas2.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
+                        <center><a class="btn btn-success" href="Fruto/Berenjena.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
             </div>
             </div>
@@ -143,7 +143,7 @@
                         <div class="card-block">
                           <img style="width:100%;" class="imagencategorias" src="img/zapallo.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+                        <center><a class="btn btn-success" href="Fruto/Zapallo.html">ENTRAR</a></center>
                         </div>
             </div>
             </div>
