--- a/legumbre.html
+++ b/legumbre.html
@@ -131,7 +131,7 @@
                         <div class="card-block">
                          <img style="width:100%;" class="imagencategorias" src="img/arvejas.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
+                        <center><a class="btn btn-success" href="Legumbre/Arvejas.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
             </div>
             </div>
@@ -140,9 +140,9 @@
                <div  class="card wow fadeIn" data-wow-delay="0.4s">
                         <h3 class="card-header success-color-dark white-text"><center>Habas</center></h3>
                         <div class="card-block">
-                          <img style="width:100%;" class="imagencategorias" src="img/Habas.jpg" >
+                          <img style="width:100%;" class="imagencategorias" src="img/HABAS2.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+                        <center><a class="btn btn-success" href="Legumbre/Habas.html">ENTRAR</a></center>
                         </div>
             </div>
             </div>
@@ -153,7 +153,7 @@
             <div class="card-block">
             <img style="width:100%;" class="imagencategorias" src="img/LegumbresHL.png" >
             <br>
-            <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+            <center><a class="btn btn-success" href="Legumbre/Poroto.html">ENTRAR</a></center>
             </div>
             </div>
             </div>
