--- a/tuberculos.html
+++ b/tuberculos.html
@@ -81,7 +81,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">
-                <img style=" width: 20%; margin-top: ;" src="img/logo4.png">
+                <img style=" width: 20%; margin-top: ;" src="img/logo4-2.png">
             </a>
             <div class="collapse navbar-collapse" id="navbarNav1">
                 <ul class="navbar-nav mr-auto">
@@ -131,7 +131,7 @@
                         <div class="card-block">
                          <img style="width:100%;" class="imagencategorias" src="img/Batatas.jpg" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html"><strong>ENTRAR</strong></a></center></iframe>
+                        <center><a class="btn btn-success" href="tuberculos/batata.html"><strong>ENTRAR</strong></a></center></iframe>
                         </div>
             </div>
             </div>
@@ -142,7 +142,7 @@
                         <div class="card-block">
                           <img style="width:100%;" class="imagencategorias" src="img/LA-CEBOLLA.png" >
                         <br>
-                        <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+                        <center><a class="btn btn-success" href="tuberculos/Cebolla.html">ENTRAR</a></center>
                         </div>
             </div>
             </div>
@@ -153,7 +153,7 @@
             <div class="card-block">
             <img style="width:100%;" class="imagencategorias" src="img/papa1.jpg" >
             <br>
-            <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+            <center><a class="btn btn-success" href="tuberculos/Papa.html">ENTRAR</a></center>
             </div>
             </div>
             </div>
@@ -167,7 +167,7 @@
             <div class="card-block">
             <img style="width:100%;" class="imagencategorias" src="img/Rabanito.jpg" >
             <br>
-            <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+            <center><a class="btn btn-success" href="tuberculos/Rabanito.html">ENTRAR</a></center>
             </div>
             </div>
             </div>
@@ -179,7 +179,7 @@
             <div class="card-block">
             <img style="width:100%;" class="imagencategorias" src="img/Remolacha.jpg" >
             <br>
-            <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+            <center><a class="btn btn-success" href="tuberculos/Remolacha.html">ENTRAR</a></center>
             </div>
             </div>
             </div>
@@ -191,7 +191,7 @@
             <div class="card-block">
             <img style="width:100%;" class="imagencategorias" src="img/Zanahoria2.jpg" >
             <br>
-            <center><a class="btn btn-success" href="raices/cebolla.html">ENTRAR</a></center>
+            <center><a class="btn btn-success" href="tuberculos/Zanahoria.html">ENTRAR</a></center>
             </div>
             </div>
             </div>
@@ -209,7 +209,7 @@
 
                 <!--First column-->
                 <div class="col-md-3 offset-lg-1 hidden-lg-down">
-                    <img style=" width: 80%; margin-top:-4px; margin-left: -17px;" src="img/logo4.png">
+                    <img style=" width: 80%; margin-top:-4px; margin-left: -17px;" src="img/logo4-2.png">
                     <p>Crea tu huerta en casa guiandote desde aquí</p>
 
                     <p>Versíon: 0.1.1</p>
