--- a/categorias.html
+++ b/categorias.html
@@ -90,7 +90,7 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                         <li class="nav-item">
-                        <a href="about.html" class="nav-link">¿Quienes Somos?</a>
+                        <a href="about.html" class="nav-link">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a href="categorias.html" class="nav-link">Categorias<span class="sr-only">(current)</span></a>
